Added .htaccess file

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 #Force non-www:
 RewriteEngine on
-RewriteCond %{HTTP_HOST} ^www\.gowww\.org.in [NC]
+RewriteCond %{HTTP_HOST} ^www\.gowww\.org\.in [NC]
 RewriteRule ^(.*)$ https://gowww.org.in/$1 [L,R=301]
 
 ### Force HTTPS
