--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 ## Force HTTPS
-RewriteCond %{HTTP:X-Forwarded-Proto} !https
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+##RewriteCond %{HTTP:X-Forwarded-Proto} !https
+##RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
